--- a/_config.yml
+++ b/_config.yml
@@ -7,9 +7,35 @@ whitelist:
 plugins:
   - jekyll-redirect-from
   - jekyll-github-metadata
-  
+
 # Markdown
 
-highlighter: true
+highlighter: false
+markdown: kramdown
+kramdown:
+  input: GFM
+  hard_wrap: false
+  parse_block_html: true
+  syntax_highlighter_opts:
+    disable: true
 
+# Defaults
 
+defaults:
+  - scope:
+      path: ""
+      type: pages
+    values:
+      layout: "default"
+      og_type: article
+      type: article
+      category: "Others"
+      excerpt_separator: "<!--more-->"
+      prism_languages: []
+
+# Site info
+
+url: https://laksa19.github.io
+title: Changelog Mikhmon V3
+
+repository: laksa19/mikhmonv3
