--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,5 @@
-
-
- # Site info	
-
-url: https://laksa19.github.io/mikhmonv3	
+#Jekyll configuration
+url: "https://laksa19.github.io/mikhmonv3"
 title: Changelog Mikhmon V3	
-
- repository: laksa19/mikhmonv3
+markdown: kmarkdown
+highlighter: rouge
